--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,15 +1,27 @@
 #  The contact options.
-
 -
-  type: github
-  icon: 'fab fa-github'
+  type: website
+  icon: 'fas fa-globe-europe'
+  url: 'https://raigho.com'
 -
   type: twitter
   icon: 'fab fa-twitter'
 -
-  type: email
-  icon: 'fas fa-envelope'
-  noblank: true            # open link in current tab
+  type: mastodon
+  icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
+  url:  'https://mastodon.social/@raigho'    
+-
+  type: twitch
+  icon: 'fab fa-twitch'
+  url: 'https://twitch.tv/raighohusky'
+-
+  type: github
+  icon: 'fab fa-github'
+
+#-
+#  type: email
+#  icon: 'fas fa-envelope'
+#  noblank: true            # open link in current tab
 -
   type: rss
   icon: 'fas fa-rss'
